--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
+    "fresh": "^0.5.2",
     "http-errors": "~1.6.2",
     "less-middleware": "~2.2.1",
+    "lodash": "^4.17.10",
     "morgan": "~1.9.0",
-    "pug": "^2.0.0-beta11"
+    "node-mime": "^1.0.0",
+    "pug": "^2.0.0-beta11",
+    "qs": "^6.5.2",
+    "send": "^0.16.2"
   },
   "devDependencies": {
     "webpack": "^4.17.1"
