--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "fresh": "^0.5.2",
+    "hoek": "^5.0.4",
     "http-errors": "~1.6.2",
     "less-middleware": "~2.2.1",
     "lodash": "^4.17.10",
